--- a/src/integrations/ctrl/ix.config.json
+++ b/src/integrations/ctrl/ix.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"..\\ix.integrations","AxProjectFolder":"c:\\W\\Develop\\gh\\ix-ax\\ix.framework\\src\\integrations\\integrations"}
+{"OutputProjectFolder":"..\\ix.integrations"}
