--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -7,7 +7,7 @@ targets:
 # - axunit-llvm
 # - axunit
 dependencies:
-  "@ptku/ix.framework.core": 0.0.0
+  "@ix-ax/ix.framework.core": '^0.1.0-alpha.0'
   "@ax/sdk": ^3.0.8
 variables:
   APAX_BUILD_ARGS: [ -d ]
