Small changes in Toasts

--- a/src/integrations/ix-draft-blazor/ix-draft-blazor.csproj
+++ b/src/integrations/ix-draft-blazor/ix-draft-blazor.csproj
@@ -26,7 +26,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2" />
-    <PackageReference Include="Ix.Presentation.Blazor.Controls" Version="0.13.0-preview.67" />
+    <PackageReference Include="Ix.Presentation.Blazor.Controls" Version="0.13.3-alpha.51" />
   </ItemGroup>
 
   <ItemGroup>
