--- a/src/core/src/ix.framework.core.blazor/ix.framework.core.blazor.csproj
+++ b/src/core/src/ix.framework.core.blazor/ix.framework.core.blazor.csproj
@@ -11,6 +11,14 @@
     <Content Remove="C:\Users\peto.kurhajec\.nuget\packages\ix.presentation.blazor.controls\0.6.0-alpha.18\contentFiles\any\net7.0\Styles\custom.scss" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="IxComponent\IxComponentView.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="IxComponent\IxComponentView.razor.css" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -21,8 +29,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Ix.Presentation.Blazor" Version="0.13.3-alpha.61" />
-    <PackageReference Include="Ix.Presentation.Blazor.Controls" Version="0.13.3-alpha.61" />
+    <PackageReference Include="Ix.Presentation.Blazor" Version="0.13.3-alpha.64" />
+    <PackageReference Include="Ix.Presentation.Blazor.Controls" Version="0.13.3-alpha.64" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.2" />
   </ItemGroup>
 
