Added IxComponentView containing all logic and design, Command and Status view type just changing IsControllable property

--- a/src/core/src/ix.framework.core.blazor/ix.framework.core.blazor.csproj
+++ b/src/core/src/ix.framework.core.blazor/ix.framework.core.blazor.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="IxComponent\IxComponentCommandView - Copy.razor.css" />
     <None Remove="IxComponent\IxComponentCommandView.razor.css" />
     <None Remove="IxComponent\IxComponentStatusView.razor.css" />
     <None Remove="IxComponent\IxComponentView.razor.css" />
@@ -19,8 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="IxComponent\IxComponentStatusView.razor.css" />
-    <Content Include="IxComponent\IxComponentCommandView.razor.css" />
+    <Content Include="IxComponent\IxComponentView.razor.css" />
     <Content Include="IxTask\Slim\IxTaskSlimView.razor.css" />
   </ItemGroup>
 
