--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "integrations"
-version                      : '0.1.2-19-desing-component-base-class.43'
+version: '0.1.2-19-desing-component-base-class.43'
 type: app
 targets:
   - "1500"
@@ -7,17 +7,18 @@ targets:
   - axunit-llvm
   - axunit
 dependencies:
-  "@ix-ax/ix.framework.core"                   : '0.1.2-19-desing-component-base-class.43'
-  "@ax/sdk": ^3.0.8
+  "@ix-ax/ix.framework.core": '0.1.2-19-desing-component-base-class.43'
+  "@ax/sdk": ^3.0.11
 variables:
   APAX_BUILD_ARGS: [ -d ]
 
 scripts:
-  ixc:    
+  ixc:
     - dotnet tool restore
     - dotnet ixc
   download:
-    - apax sld --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r --default-server-interface
+    - apax sld --accept-security-disclaimer -t $AXTARGET -i
+      $AXTARGETPLATFORMINPUT -r --default-server-interface
   check+download: |
     if [ $AXTARGET ]; then
       if [ $AXTARGETPLATFORMINPUT ]; then
@@ -35,7 +36,7 @@ scripts:
     fi
   do-it-all:
     - apax install
-    - apax build 
+    - apax build
     - apax download
   postbuild:
     - apax ixc
