--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -7,7 +7,8 @@ targets:
   - axunit-llvm
   - axunit
 dependencies:
-  "@ix-ax/ix.framework.core": '0.1.2-19-desing-component-base-class.43'
+  "@ix-ax/ix.framework.core" : '0.1.2-19-desing-component-base-class.43'
+  "@ix-ax/ix.framework.data" : '0.1.2-19-desing-component-base-class.43'
   "@ax/sdk": ^3.0.11
 variables:
   APAX_BUILD_ARGS: [ -d ]
