--- a/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
+++ b/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -6,8 +6,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Ix.Abstractions" Version="0.6.0-alpha.*" />
-		<PackageReference Include="Ix.Connector" Version="0.6.0-alpha.*" />
+		<PackageReference Include="Ix.Abstractions" Version="0.13.4-alpha.85" />
+		<PackageReference Include="Ix.Connector" Version="0.13.4-alpha.85" />
 	</ItemGroup>
 
 	<ItemGroup>
