--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet build cake/Build.csproj
                        
     - name: "Run build script"
-      run: dotnet run --project cake/Build.csproj --do-test true --do-pack true --test-level 1      
+      run: dotnet run --project cake/Build.csproj --do-test false --do-pack false --test-level 1      
     # - name: Test Report
     #   uses: dorny/test-reporter@v1
     #   if: success() || failure()
