--- a/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
+++ b/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
@@ -1,16 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<PackageId>ix.framework.core</PackageId>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Ix.Abstractions" Version="0.13.4-alpha.85" />
-		<PackageReference Include="Ix.Connector" Version="0.13.4-alpha.85" />
+		<PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Ix.Connector" Version="0.13.4-alpha.88" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include=".g\" />
 		<Compile Include=".g\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include=".meta\" />
+		<Content Include=".meta\**" />
 	</ItemGroup>
 </Project>
