--- a/src/data/src/ix.framework.data.blazor/ix.framework.data.blazor.csproj
+++ b/src/data/src/ix.framework.data.blazor/ix.framework.data.blazor.csproj
@@ -28,14 +28,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Ix.Presentation.Blazor" Version="0.13.4-alpha.86" />
-    <PackageReference Include="Ix.Presentation.Blazor.Controls" Version="0.13.4-alpha.86" />
+    <PackageReference Include="Ix.Presentation.Blazor" Version="0.13.4-alpha.88" />
+    <PackageReference Include="Ix.Presentation.Blazor.Controls" Version="0.13.4-alpha.88" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\core\src\ix.framework.core.blazor\ix.framework.core.blazor.csproj" />
-    <ProjectReference Include="..\ix.framework.data\ix.framework.data.csproj" />
+    <ProjectReference Include="..\ix.framework.data\_ix-ax_ix.framework.data.csproj" />
   </ItemGroup>
 
 </Project>
