experimenting with ix data, wip

--- a/src/integrations/integration.blazor/integration.blazor.csproj
+++ b/src/integrations/integration.blazor/integration.blazor.csproj
@@ -16,6 +16,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\core\src\ix.framework.core.blazor\ix.framework.core.blazor.csproj" />
+		<ProjectReference Include="..\..\data\src\ix.framework.data.blazor\ix.framework.data.blazor.csproj" />
 		<ProjectReference Include="..\ix.integrations\integrations.csproj" />
 	</ItemGroup>
 
