--- a/src/base/src/Ix.Base.Abstractions/Ix.Base.Abstractions.csproj
+++ b/src/base/src/Ix.Base.Abstractions/Ix.Base.Abstractions.csproj
@@ -3,21 +3,15 @@
     <OutputType>Library</OutputType>
     <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <!--NuGet properties-->   
-    <Authors>TcOpenGroup contributors</Authors>
-    <Company>TcOpenGroup</Company>
-    <RepositoryUrl>https://github.com/TcOpenGroup/TcOpen</RepositoryUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>TwinCAT3 Beckhoff</PackageTags>
-    <PackageReleaseNotes>Early dev stage. Experimental. DO NOT USE IN PRODUCTION!!!</PackageReleaseNotes>
-    <PackageProjectUrl>http://docs.tcopengroup.org/</PackageProjectUrl>
-    <PackageIconUrl>https://avatars.githubusercontent.com/u/72873267?s=60&amp;v=4</PackageIconUrl>
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+	  <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.7" />
-    <PackageReference Include="Ix.Connector" Version="0.13.4-alpha.90" />
+    <PackageReference Include="Ix.Connector" Version="0.13.4-alpha.93" />
   </ItemGroup>
 </Project>
