--- a/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
+++ b/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
@@ -4,6 +4,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackageId>ix.framework.core</PackageId>
+		<RootNamespace>ix.framework.core</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -11,7 +12,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Ix.Connector" Version="0.13.4-alpha.90" />
+		<PackageReference Include="Ix.Connector" Version="0.13.4-alpha.93" />
 	</ItemGroup>
 
 	<ItemGroup>
