--- a/src/probers/ctrl/apax.yml
+++ b/src/probers/ctrl/apax.yml
@@ -1,18 +1,25 @@
-name: "integrations"
-version                   : '0.1.4-44--NEW-FEATURE-ix-data-Implement-IxDataExchange-based-on-TcoDataExchange.54'
-type: app
+name: "@ix-ax/ix.framework.probers"
+version               : '0.1.4-44--NEW-FEATURE-ix-data-Implement-IxDataExchange-based-on-TcoDataExchange.54'
+type: lib
 targets:
   - "1500"
-  - plcsim
-  - axunit-llvm
+  - llvm
   - axunit
+  - axunit-llvm
+  - plcsim
+files:
+  - src
 dependencies:
-  "@ix-ax/ix.framework.core"                    : '0.1.4-44--NEW-FEATURE-ix-data-Implement-IxDataExchange-based-on-TcoDataExchange.54'
-  "@ix-ax/ix.framework.data"                    : '0.1.4-44--NEW-FEATURE-ix-data-Implement-IxDataExchange-based-on-TcoDataExchange.54'
-  "@ix-ax/ix.framework.probers"                 : '0.1.4-44--NEW-FEATURE-ix-data-Implement-IxDataExchange-based-on-TcoDataExchange.54'
-  "@ax/sdk": ^3.0.11
+  "@ix-ax/ix.framework.core"               : '0.1.4-44--NEW-FEATURE-ix-data-Implement-IxDataExchange-based-on-TcoDataExchange.54'  
+devDependencies:
+  "@ax/sdk": 3.0.8
 variables:
-  APAX_BUILD_ARGS: [ -d ]
+  APAX_BUILD_ARGS: [ -d ]  
+repository:
+  type: "git"
+  url: "https://github.com/ix-ax/ix.framework.git"
+license: "https://github.com/ix-ax/ix.framework/blob/dev/license"
+homepage: "https://github.com/ix-ax/ix.framework"
 
 scripts:
   ixc:
@@ -42,15 +49,3 @@ scripts:
     - apax download
   postbuild:
     - apax ixc
-  watch:
-    - dotnet watch --project ..\\integration.blazor\\integration.blazor.csproj
-  rr:
-    - apax build
-    - apax download
-    - apax watch
-  fr:
-    - ..\\scripts\\StartPlcSimAdvCli.exe
-    - apax install
-    - apax rr
-  da:
-    - apax do-it-all
