Adds integration tests for repositories and whole remote looping with data exchange

--- a/src/integrations/tests/integration.tests/integration.tests.csproj
+++ b/src/integrations/tests/integration.tests/integration.tests.csproj
@@ -10,8 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="RavenDB.Embedded" Version="5.3.108" />
     <PackageReference Include="Siemens.Simatic.S7.Webserver.API" Version="2.1.4" />
     <PackageReference Include="xunit" Version="2.4.2" />
+	      <PackageReference Include="RavenDB.Embedded" Version="5.3.108" />	    
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -24,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\data\src\repositories\Json\Ix.Framework.Data.Json.csproj" />
+    <ProjectReference Include="..\..\..\data\src\repositories\RavenDb\TcOpen.Inxton.RavenDb\Ix.Framework.Data.RavenDb.csproj" />
     <ProjectReference Include="..\..\ix.integrations\integrations.csproj" />
   </ItemGroup>
 
