--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/ix.framework.core"
-version      : '0.1.4-40--NEW-FEATURE-ix-core-add-implementation-of-remote-task.43'
+version: '0.1.4-40--NEW-FEATURE-ix-core-add-implementation-of-remote-task.43'
 type: lib
 targets:
   - "1500"
@@ -19,3 +19,9 @@ homepage: "https://github.com/ix-ax/ix.framework"
 scripts:
   postbuild:
     - dotnet ixc
+dependencies:
+  "@ax/system-strings": ^4.2.3
+  "@ax/simatic-1500-clocks": ^3.0.6
+  "@ax/system-serde": ^1.3.13
+  "@ax/system-bitaccess": ^5.0.4
+  "@ax/system-datetime": ^3.1.3
