--- a/cake/Build.csproj
+++ b/cake/Build.csproj
@@ -19,4 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="FilteredSolution\" />
+  </ItemGroup>
 </Project>
