--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -31,11 +31,11 @@ jobs:
           GH_TOKEN : ${{ secrets.GH_TOKEN }}
           GH_USER : ${{ secrets.GH_USER }}
       run: dotnet run --project cake/Build.csproj --do-test true --do-pack true --test-level 2 --do-publish true --do-publish-release true
-    # - name: Test Report
-    #   uses: dorny/test-reporter@v1
-    #   if: success() || failure()
-    #   with:
-    #     name: Test report
-    #     path: 'TestResults/*.xml'     
-    #     reporter: dotnet-trx
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
+      with:
+        name: Test report
+        path: 'TestResults/*.xml'     
+        reporter: dotnet-trx
 
