adds giversion.build to test project (pipeline  failure)

--- a/src/integrations/tests/integration.tests/integration.tests.csproj
+++ b/src/integrations/tests/integration.tests/integration.tests.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="RavenDB.Embedded" Version="5.3.108" />
     <PackageReference Include="Siemens.Simatic.S7.Webserver.API" Version="2.1.4" />
