--- a/src/data/tests/Ix.Framework.Repository.Integration.Tests_L1/Ix.Framework.Repository.Integration.Tests_L1.csproj
+++ b/src/data/tests/Ix.Framework.Repository.Integration.Tests_L1/Ix.Framework.Repository.Integration.Tests_L1.csproj
@@ -7,6 +7,10 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="nunit" Version="3.13.3" />
 		<PackageReference Include="JunitXml.TestLogger" Version="3.0.124" />
