--- a/src/probers/tests/ix.famework.probers.tests/ix.framework.probers.tests.csproj
+++ b/src/probers/tests/ix.famework.probers.tests/ix.framework.probers.tests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="Ix.Connector.S71500.WebAPI" Version="0.13.4-alpha.93" />
