hanging tests https://github.com/dotnet/aspnetcore/issues/3443#issuecomment-498329024

--- a/src/core/tests/ix.famework.core.tests/ix.framework.core.tests.csproj
+++ b/src/core/tests/ix.famework.core.tests/ix.framework.core.tests.csproj
@@ -25,6 +25,12 @@
     </PackageReference>
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="xunit.runner.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\ix.framework.core\_ix-ax_ix.framework.core.csproj" />
   </ItemGroup>
