--- a/src/probers/tests/ix.famework.probers.tests/ix.framework.probers.tests.csproj
+++ b/src/probers/tests/ix.famework.probers.tests/ix.framework.probers.tests.csproj
@@ -14,7 +14,13 @@
     <None Remove="Probers\**" />
   </ItemGroup>
 
-  <ItemGroup>
+	<ItemGroup>
+		<None Update="xunit.runner.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
+	<ItemGroup>
     <PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
