--- a/src/data/tests/ix.famework.data.tests/ix.framework.data.tests.csproj
+++ b/src/data/tests/ix.famework.data.tests/ix.framework.data.tests.csproj
@@ -25,6 +25,11 @@
     </PackageReference>
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="xunit.runner.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\ix.framework.data\_ix-ax_ix.framework.data.csproj" />
   </ItemGroup>
