raven integration tests moved to L3

--- a/src/data/tests/Ix.Framework.Repository.Integration.Tests_L3/Ix.Framework.Repository.Integration.Tests_L3.csproj
+++ b/src/data/tests/Ix.Framework.Repository.Integration.Tests_L3/Ix.Framework.Repository.Integration.Tests_L3.csproj
@@ -22,9 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\src\repositories\InMemory\Ix.Framework.Data.InMemory.csproj" />
-	  <ProjectReference Include="..\..\src\repositories\Json\Ix.Framework.Data.Json.csproj" />
 	  <ProjectReference Include="..\..\src\repositories\MongoDb\Ix.Framework.Data.MongoDb.csproj" />
-	  <ProjectReference Include="..\..\src\repositories\RavenDb\TcOpen.Inxton.RavenDb\Ix.Framework.Data.RavenDb.csproj" />
+	  <ProjectReference Include="..\..\src\repositories\RavenDb\Ix.Framework.Data.RavenDb\Ix.Framework.Data.RavenDb.csproj" />
 	</ItemGroup>
 </Project>
