--- a/src/probers/ctrl/apax.yml
+++ b/src/probers/ctrl/apax.yml
@@ -1,25 +1,19 @@
 name: "@ix-ax/ix.framework.probers"
-version                                : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.89'
+version                                          : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.93'
 type: lib
 targets:
-  - "1500"
-  - llvm
-  - axunit
+#  - "1500"
+#  - llvm
+#  - axunit
   - axunit-llvm
-  - plcsim
 files:
   - src
 dependencies:
-  "@ix-ax/ix.framework.core"                                : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.89'
+  "@ix-ax/ix.framework.core"                                          : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.93'
 devDependencies:
   "@ax/sdk": 3.0.8
 variables:
   APAX_BUILD_ARGS: [ -d ]  
-repository:
-  type: "git"
-  url: "https://github.com/ix-ax/ix.framework.git"
-license: "https://github.com/ix-ax/ix.framework/blob/dev/license"
-homepage: "https://github.com/ix-ax/ix.framework"
 
 scripts:
   ixc:
