--- a/src/messaging/ctrl/apax.yml
+++ b/src/messaging/ctrl/apax.yml
@@ -1,10 +1,10 @@
 name: "@ix-ax/ix.framework.messaging"
-version                                   : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.89'
+version                                             : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.93'
 type: lib
 targets:
-  - "1500"
-  - llvm
-  - axunit
+#  - "1500"
+#  - llvm
+#  - axunit
   - axunit-llvm
 files:
   - src  
@@ -20,5 +20,5 @@ dependencies:
   "@ax/system-serde": ^1.3.13
   "@ax/system-bitaccess": ^5.0.4
   "@ax/system-datetime": ^3.1.3
-  "@ix-ax/ix.framework.core"                                   : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.89'
-  "@ix-ax/ix.framework.utils"                                  : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.89'
+  "@ix-ax/ix.framework.core"                                             : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.93'
+  "@ix-ax/ix.framework.utils"                                            : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.93'
