--- a/src/messaging/src/ix.framework.messaging.blazor/ix.framework.messaging.blazor.csproj
+++ b/src/messaging/src/ix.framework.messaging.blazor/ix.framework.messaging.blazor.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>ix.framework.core</RootNamespace>
+    <RootNamespace>ix.framework.messaging.blazor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
