--- a/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
+++ b/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -12,7 +12,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Ix.Connector" Version="0.13.4-alpha.93" />
+		<PackageReference Include="Ix.Connector" Version="0.13.4-alpha.94" />
 	</ItemGroup>
 
 	<ItemGroup>
