--- a/src/data/tests/Ix.Framework.Repository.Integration.Tests_L1/Ix.Framework.Repository.Integration.Tests_L1.csproj
+++ b/src/data/tests/Ix.Framework.Repository.Integration.Tests_L1/Ix.Framework.Repository.Integration.Tests_L1.csproj
@@ -15,7 +15,7 @@
 		<PackageReference Include="nunit" Version="3.13.3" />
 		<PackageReference Include="JunitXml.TestLogger" Version="3.0.124" />
 	<PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0-preview-20230223-05" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
