Added IxDataTest struct

--- a/src/data/src/ix.framework.data/_ix-ax_ix.framework.data.csproj
+++ b/src/data/src/ix.framework.data/_ix-ax_ix.framework.data.csproj
@@ -12,6 +12,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Ix.Abstractions" Version="0.14.0-alpha.67" />
 		<PackageReference Include="Ix.Connector" Version="0.14.0-alpha.67" />
 	</ItemGroup>
 
