--- a/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
+++ b/src/core/src/ix.framework.core/_ix-ax_ix.framework.core.csproj
@@ -12,7 +12,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Ix.Connector" Version="0.14.0-alpha.70" />
+		<PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.79" />
 	</ItemGroup>
 
 	<ItemGroup>
