--- a/src/data/src/ix.framework.data/_ix-ax_ix.framework.data.csproj
+++ b/src/data/src/ix.framework.data/_ix-ax_ix.framework.data.csproj
@@ -12,8 +12,8 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Ix.Abstractions" Version="0.14.0-alpha.70" />
-		<PackageReference Include="Ix.Connector" Version="0.14.0-alpha.70" />
+		<PackageReference Include="AXSharp.Abstractions" Version="0.14.0-alpha.79" />
+		<PackageReference Include="AXSharp.Connector" Version="0.14.0-alpha.79" />
 	</ItemGroup>
 
 	<ItemGroup>
